--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "bot.js",
   "dependencies": {
     "canvas": "^1.5.0",
-    "noisejs": "^2.1.0"
+    "noisejs": "^2.1.0",
+    "twit": "^2.2.5"
   },
   "devDependencies": {},
   "scripts": {
