--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "bot.js",
   "dependencies": {
     "canvas": "^1.5.0",
+    "deep-extend": "^0.4.1",
     "noisejs": "^2.1.0",
-    "twit": "^2.2.5"
+    "request": "^2.75.0"
   },
   "devDependencies": {},
   "scripts": {
