--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "bot.js",
   "dependencies": {
-    "canvas": "^1.5.0",
     "deep-extend": "^0.6.0",
+    "canvas": "2",
     "noisejs": "^2.1.0",
     "request": "^2.75.0"
   },
